deployments/k8s/ai-service/ai-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: thesis-test
  labels:
    app: ai-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5005  
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ai-service   
  namespace: thesis-test
subsets:
  - addresses:
      - ip: 10.29.20.121  
    ports:
      - name: http
        port: 5005
