deployments/k8s/ai-service/ai-virtual-service-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ai-vs
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /api/Ai
    route:
    - destination:
        host: ai-service
        port:
          number: 80
